Fix issue with words break in task description and comments [SCI-477]

--- a/app/assets/stylesheets/my_modules.scss
+++ b/app/assets/stylesheets/my_modules.scss
@@ -16,3 +16,13 @@
   margin-left: 0;
   margin-right: 0;
 }
+
+.description-label {
+  word-break: break-all;
+  word-wrap: break-word;
+}
+
+.comment {
+  word-break: break-all;
+  word-wrap: break-word;
+}
